--- a/stats/pom.xml
+++ b/stats/pom.xml
@@ -14,6 +14,6 @@
     <modules>
         <module>stats-client</module>
         <module>stats-dto</module>
-        <module>stats-service</module>
+        <module>stats-server</module>
     </modules>
 </project>
