--- a/ewm-service/pom.xml
+++ b/ewm-service/pom.xml
@@ -72,7 +72,7 @@
         </dependency>
         <dependency>
             <groupId>ru.practicum</groupId>
-            <artifactId>stats-service</artifactId>
+            <artifactId>stats-server</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
