feat: добавлен основной функционал приложения

--- a/ewm-service/src/main/resources/application.properties
+++ b/ewm-service/src/main/resources/application.properties
@@ -19,3 +19,5 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=org.postgresql.Driver
 #---
+
+stats-server.url=http://stats-server:9090
