--- a/ewm-service/src/main/resources/application.properties
+++ b/ewm-service/src/main/resources/application.properties
@@ -20,5 +20,4 @@ spring.datasource.password=root
 spring.datasource.driver-class-name=org.postgresql.Driver
 #---
 
-#---stats-server.url=http://stats-server:9090
-stats-server.url=http://localhost:9090
+stats-server.url=http://stats-server:9090
